--- a/templates/base.html
+++ b/templates/base.html
@@ -48,13 +48,14 @@ https://templatemo.com/tm-583-festava-live
 
                 <div class="col-lg-12 col-12 d-flex flex-wrap">
                     <p class="d-flex me-4 mb-0">
-                        <i class="bi-person custom-icon me-2"></i>
                         {% if user.is_authenticated %}
+                        <a href="{% url "dashboard"%}" type="button" class="btn btn-outline-light">
+                            <i class="bi-person custom-icon me-2"></i>
                             <strong class="text-dark">Your predicted refill is on {{user.profile.predicted_refill}}</strong>
+                        </a>
                         {% else %}
-                            <strong class="text-dark">Get effecient premium services at convenient non-premium cost</strong>
+                                <strong class="text-dark">Get effecient premium services at convenient non-premium cost</strong>
                         {% endif %}
-                        
                         
 
                     </p>
@@ -81,6 +82,7 @@ T e m p l a t e M o
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/jquery.sticky.js' %}"></script>
     <script src="{% static 'js/click-scroll.js' %}"></script>
+    <script src="{% static 'js/google-map.js' %}"></script>
     <script src="{% static 'js/custom.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     
