--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -8,6 +8,34 @@
             <div class="container">
                 <div class="row">
                     <!-- Modal -->
+                    <div class="modal fade" id="gasModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Pay with G-pay</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <form method="POST" action="/G-pay/{{order_id}}/" >
+                                <div class="modal-body">
+                                
+                                    {% csrf_token %}
+                                    <h9 class="text-muted">Amount will be deducted from G-save(Savings platform)</h9><br></br>
+                                    <div class="mb-3">
+                                        <label class="form-label">Amount</label>
+                                        <input class="form-control" type="text" aria-label="readonly input example" name="amount" value={{price}} readonly>
+                                        <div id="emailHelp" class="form-text">This is automatically generated from your checkout</div>
+                                    </div>                                      
+                                
+                                </div>
+                                <div class="modal-footer">
+                                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-outline-primary">Pay</button>
+                                </div>
+                            </form>
+                        </div>
+                        </div>
+                    </div>
+                    <!-- Modal -->
                     <div class="modal fade" id="m-pesaModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
@@ -83,14 +111,14 @@
                                     </div>
                                     <div class="col-12">
                                         <label class="form-label">Delivery Location <span class="text-muted"></span></label>
-                                        <input  class="form-control" name="email" value={{user.profile.location}}>
+                                        <input  class="form-control" name="location" value={{user.profile.location}}>
                                         <div class="invalid-feedback">
                                             Please enter a valid email address
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <label for="email" class="form-label">Contact Phone Number <span class="text-muted"></span></label>
-                                        <input type="text" class="form-control" name="email" value={{user.profile.mobile_number}}>
+                                        <input type="text" class="form-control" name="number" value={{user.profile.mobile_number}}>
                                         <div class="invalid-feedback">
                                             Please enter a valid email address
                                         </div>
@@ -140,12 +168,17 @@
                                         <!--<a class="btn btn-outline-info" role="button" href="#">M-Pesa</a>-->
                                         <button type="button" class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#m-pesaModal">M-Pesa</button>
                                     </div>
+                                    <div class="col-auto">
+                                        <!--<a class="btn btn-outline-info" role="button" href="#">M-Pesa</a>-->
+                                        <button type="button" class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#gasModal">G-pay</button>
+                                    </div>
                                 </div>
                                 </div>
                                 
                                 <hr class="my-4">
         
                                 {% if paid == True %}
+                                    {% comment %} <button class="w-100 btn btn-primary btn-lg mb-5" data-bs-toggle="modal" data-bs-target="#m-pesaModal">Proceed To Delivery</button> {% endcomment %}
                                     <button class="w-100 btn btn-success btn-lg mb-5" type="submit">Complete Checkout</button>
                                 {% else %}
                                     <button class="w-100 btn btn-success btn-lg mb-5" type="submit" disabled>Complete Checkout</button>
@@ -167,7 +200,7 @@
                                     <tr>
                                         <th scope="row"><img class="thumbnail" src="{{order.product.pic.url}}" height="50" width="50"></th>
                                         <td>{{order.product}}</td>
-                                        <td>${{order.product.price}}</td>
+                                        <td>Ksh {{order.product.price}}</td>
                                         </th>
                                     </tr>
                                 {% endfor %}
@@ -177,7 +210,7 @@
                             
                             <h6>Items: {{quantity}}</h6>
                             
-                            <h6>Total: ${{total}}</h6>
+                            <h6>Total: Ksh {{total}}</h6>
                         </form>
                     </div>
                 </div>
