--- a/templates/index.html
+++ b/templates/index.html
@@ -224,7 +224,7 @@
 
                             <div class="tab-pane fade" id="nav-ContactMap" role="tabpanel"
                                 aria-labelledby="nav-ContactMap-tab">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d63824.4028695968!2d36.991435017329735!3d-1.1424664711539212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e0!4m0!4m3!3m2!1d-1.1425524999999999!2d37.026454699999995!5e0!3m2!1sen!2ske!4v1680035527040!5m2!1sen!2ske" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15956.140928804978!2d37.00860499678166!3d-1.135202914678676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f47326cc8faad%3A0xfaf7d5d750380218!2slower%20breeze%20park!5e0!3m2!1sen!2ske!4v1681075592707!5m2!1sen!2ske" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 <!-- You can easily copy the embed code from Google Maps -> Share -> Embed a map // -->
                             </div>
                         </div>
