--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -40,7 +40,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_2">About</a>
+                    <a class="nav-link click-scroll" href="{% url 'savings' %}">Savings</a>
                 </li>
                 <li class="nav-item">
                     <form class="d-flex" role="search">
