--- a/templates/register.html
+++ b/templates/register.html
@@ -15,6 +15,7 @@
                                 <div class="mb-3">
                                     <label for="exampleInputEmail1" class="form-label">{{field.label}}</label><br>
                                     {{field}}
+                                    {{field.errors}}
                                 </div>
                             {% endfor %}
                             <button type="submit" class="btn btn-primary">Register</button>
