--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -49,7 +49,7 @@
                     </form>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_6">Contact</a>
+                    <a class="nav-link click-scroll" href="{% url 'order-history' %}">Orders</a>
                 </li>
                 
                 
